--- a/force-app/main/default/classes/restrictAssignmentCreation.cls
+++ b/force-app/main/default/classes/restrictAssignmentCreation.cls
@@ -23,7 +23,7 @@ public class restrictAssignmentCreation implements TriggerAction.BeforeInsert{
     
     
     /**
-*   {Purpose} - Method to restrict the project manager not to craete any assignments for Inactive Projects
+*   {Purpose} - Method to restrict the project manager not to create any assignments for Inactive Projects
 *
 *   CHANGE HISTORY
 *   ====================================================================================================
@@ -40,18 +40,22 @@ public class restrictAssignmentCreation implements TriggerAction.BeforeInsert{
                 projectIds.add(assign.EMS_TM_ProjectName_Asgn__c); 
             }
         }
-        
-         for(EMS_TM_Project__c projectRec : [SELECT id, EMS_TM_Status__c 
+         User loggedInUser = [SELECT Id,Profile.Name,TA_Admin__c FROM User Where Id=:Userinfo.getUserId()];
+         for(EMS_TM_Project__c projectRec : [SELECT id, EMS_TM_Status__c,Project_Manager__c,Project_Manager__r.EMS_TM_User__c 
                                                 FROM EMS_TM_Project__c 
                                                 WHERE id IN :projectIds
-                                                AND EMS_TM_Status__c = 'Completed']){
+                                                ]){
             projMap.put(projectRec.Id,projectRec);                                        
           }
         
          for(EMS_TM_Assignment__C assignL :assigndata ){
              if(projMap.containsKey(assignL.EMS_TM_ProjectName_Asgn__c)){
-               assignL.addError(Label.Error_Message_For_Assignment_Restriction);  
-             } 
+                 if(projMap.get(assignL.EMS_TM_ProjectName_Asgn__c).EMS_TM_Status__c == 'Completed'){
+                    assignL.addError(Label.Error_Message_For_Assignment_Restriction); 
+                 }else if(projMap.get(assignL.EMS_TM_ProjectName_Asgn__c).Project_Manager__r.EMS_TM_User__c != loggedInUser.id || loggedInUser.Profile.Name != 'System Administrator' || !loggedInUser.TA_Admin__c ){
+                    assignL.addError('Only Admin or Project Manager are allowed to assign the resource to project');
+                 }
+             }
          }
         
     }
