--- a/force-app/main/default/classes/AssignServiceRequests.cls
+++ b/force-app/main/default/classes/AssignServiceRequests.cls
@@ -88,8 +88,8 @@ public without sharing class AssignServiceRequests  implements TriggerAction.Bef
                 }else if(cnew.Type == 'Resignation'){
                     cnew.Case_Assignee__c = ResourceManager != null ? ResourceManager : ReportingManager;
                 }else if(cnew.Type == 'Special Leaves'){
-                    if(ReportingManager != null && (cnew.Request_Sub_Type__c == 'Paternity' || cnew.Request_Sub_Type__c == 'Marriage' || cnew.Request_Sub_Type__c == 'Bereavement' || cnew.Request_Sub_Type__c == 'Compensatory Off')){
-                        cnew.Case_Assignee__c = ReportingManager;
+                    if(queueMap.containsKey(Label.Default_Grid_Support_Request_Owner) && (cnew.Request_Sub_Type__c == 'Paternity' || cnew.Request_Sub_Type__c == 'Marriage' || cnew.Request_Sub_Type__c == 'Bereavement' || cnew.Request_Sub_Type__c == 'Compensatory Off')){
+                        cnew.Case_Assignee__c = queueMap.get(Label.Default_Grid_Support_Request_Owner);
                     }
                     else if(cnew.Request_Sub_Type__c == 'Maternity'){
                         cnew.Case_Assignee__c =  queueMap.get(Label.Default_HR_Support_Request_Owner);
