--- a/force-app/main/default/classes/LeaveCalculateHandler_Test.cls
+++ b/force-app/main/default/classes/LeaveCalculateHandler_Test.cls
@@ -1,8 +1,9 @@
 @isTest
 public class LeaveCalculateHandler_Test {
+   
     
-     @isTest
-    public static void testLeaveCalculateHandler(){
+  /*  @isTest
+  //  public static void testLeaveCalculateHandler(){
         user adminuser = TestDataFactory.createAdminUser(true);
         Resource_Role__c role;
         Resource_Role__c role1;
@@ -10,8 +11,11 @@ public class LeaveCalculateHandler_Test {
         Contact con;
         Contact conRRR;
         EMS_LM_Leave__c annualtype;
+        //  EMS_LM_Leave__c loptype;
+        // EMS_LM_Leave__c compofftype;
+        // EMS_LM_Leave__c wfhtype;
         Resource_Resource_Relationship__c rrr;
-         list<contact> conlist = new list<contact>();
+        list<contact> conlist = new list<contact>();
         system.runAs(adminuser){
             
             role = TestDataFactory.createResourceRole('Software Engineer',true);
@@ -23,14 +27,13 @@ public class LeaveCalculateHandler_Test {
             EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
             
             //EMS_LM_Leave_Credit__c lcreditAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1.6,annualtype.id, true);
-        
+            
             
             acc = TestDataFactory.createAccount(true);
             con=TestDataFactory.createResourceContact(acc.id, false);
             con.EMS_RM_Employee_Id__c = 'CP10234';
             con.Resource_Role__c = role.Id;
-            con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
-            con.EMS_LM_No_Of_Leaves_Credit__c = -4;
+            con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;           
             
             
             conlist.add(con);
@@ -45,14 +48,29 @@ public class LeaveCalculateHandler_Test {
         }
         User u1;
         User u2;
-        Test.startTest();
+        
         system.runAs(adminuser){
-            u1 = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
-            u2 = Testdatafactory.createCommunityUser2WithAccAndContact(acc.id,conRRR.Id,true);
+            Test.startTest();
+            // u1 = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
+            //   u2 = Testdatafactory.createCommunityUser2WithAccAndContact(acc.id,conRRR.Id,true);
+            EMS_LM_Leave_History__c request = TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, true ,'Pending');
+            request.EMS_LM_Status__c='Approved';
+            request.EMS_LM_Leave_Duration__c=2;
+            update request;
+            
+            EMS_LM_Leave_History__c request2 = TestDataFactory.createLeaveRequest(con.id, system.today().adddays(10), system.today().adddays(11), annualtype.id, true ,'Auto Approved');
+            
+            EMS_LM_Leave_History__c request3 = TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), annualtype.id, true,'Approver 1 Pending');
+            request3.EMS_LM_Status__c='Approver 2 Pending';
+            update request3;
+            //  request.EMS_LM_Status__c='Approved';
+//update request;
+            Test.stopTest();
         }
-    }
+        
+    }*/
     
-     @isTest
+    @isTest
     public static void testContactLeaveUpdate(){
         Resource_Role__c role = TestDataFactory.createResourceRole(true);
         EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
@@ -78,17 +96,13 @@ public class LeaveCalculateHandler_Test {
             EMS_LM_Leave_Credit__c commOffAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,compofftype.id, true);
             EMS_LM_Leave_Credit__c workforHome = Testdatafactory.createLeaveCredit(con.id,system.today(),1,workfromhome.id, true);
             
-            Test.startTest();      
+            Test.startTest();
+            list<EMS_LM_Leave_History__c> requestlist =New list<EMS_LM_Leave_History__c>();
             EMS_LM_Leave_History__c request = TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, true ,'Pending');
-         //   request.EMS_LM_Status__c='Approver 1 Pending';
-           // update request;
-          //  request.EMS_LM_Status__c='Approver 2 Pending';
-            //update request;
-            //request.EMS_LM_Status__c='Approved';
-           // update request;
+            requestlist.add(request);
             
-          //  EMS_LM_Leave_History__c request2 = TestDataFactory.createLeaveRequest(con.id, system.today().adddays(6), system.today().adddays(7), bretype.id, true,'Pending');
             EMS_LM_Leave_History__c request3 = TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), compofftype.id, true,'Pending');
+            requestlist.add(request3);
             
             string leaveId =request.Id;
             String startd = string.valueOf(system.today().adddays(13));
@@ -96,14 +110,14 @@ public class LeaveCalculateHandler_Test {
             EMS_LM_Leave_Duration_Handler.getLeaveDuration(startd, endd, 'India', true,'Annual Leave');
             EMS_LM_Leave_Duration_Handler.getwfhDuration(startd, endd, 'India');
             EMS_LM_Leave_Duration_Handler.getwfhWFHweekends(startd, endd);
-           // EMS_LM_Leave_Duration_Handler.getMaternityLeaveDuration(startd, endd,'India', true);
             
             EMS_LM_EditLeaveRequest.getLeaveRequestMethod(leaveId);
             EMS_LM_EditLeaveRequest.updateleaveRequest(request,leaveId);
-            
+            System.assertEquals(true, requestlist.size()>0);
+            System.assertEquals(2, requestlist.size());
             test.stopTest();
         }
     }
-  
+    
     
 }
