--- a/force-app/main/default/classes/LeaveManagementApexControllerTest.cls
+++ b/force-app/main/default/classes/LeaveManagementApexControllerTest.cls
@@ -1,49 +1,59 @@
 @isTest
 public class LeaveManagementApexControllerTest {
     
-    public static testMethod void testGetLeaveManagement() {
+    static testMethod void leaveManagemet() {
+        user adminuser = TestDataFactory.createAdminUser(true);
+        Resource_Role__c role;
+        Account acc;
+        Contact con;
+        Contact conRRR;
+        Resource_Resource_Relationship__c rrr;
+        EMS_LM_Leave__c annualtype;
+        system.runAs(adminuser){
+            role = TestDataFactory.createResourceRole('Software Engineer',true);
+            annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
+            EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
+            EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+            EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+            EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);           
+            acc = TestDataFactory.createAccount(true);
+            con=TestDataFactory.createResourceContact(acc.id, false);
+            con.EMS_RM_Employee_Id__c = 'CP10234';
+            con.Resource_Role__c = role.Id;
+            con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
+            con.EMS_LM_No_Of_Leaves_Credit__c = 10;
+            insert con;
+        }
+        User u;
+        Test.startTest();
+        system.runAs(adminuser){
+            u = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
+        }
         
-          UserRole r =[Select Id from UserRole where Name = 'leadership'];
-        Id sysAdminId = [select Id From Profile where Name ='System Administrator'].Id;
-        Id communityId = [select Id From Profile where Name ='TM Customer Community'].Id;
-        User u = [select Id, contactId,ContactId__c, Email From User WHERE IsActive =True and ProfileId = :communityId limit 1];
-     //   Contact empLeaveBalance = [SELECT Id,EMS_LM_No_Of_Availble_Leaves__c FROM Contact WHERE Id =: u.ContactId__c ];
-       
-        contact c2 = new Contact();
-        c2.FirstName = 'ab123';
-        c2.LastName = 'efgh';
-        c2.Official_Mail__c = u.Email;
-        c2.EMS_Phone_Number__c = '8615748522';
-        c2.Location__c ='India';
-        c2.RecordTypeId = [SELECT Id FROM RecordType where name = 'Resource'].Id;
-        c2.EMS_LM_User_1__c = u.Id;
-        c2.EMS_LM_User2__c = u.Id;
-        c2.EMS_TM_User__c = u.Id;
-        c2.EMS_LM_Gender__c = 'Female';
-        c2.EMS_LM_Marital_Status__c = 'Married';
-        c2.EMS_LM_Maternity_Leave__c = true;
-        c2.EMS_EM_JD__c = system.today();
-        insert c2;  
-        Date startdate = system.today() + 5 ;
-        String startd = string.valueOf(startdate);
-        Date enddate = startdate + 4;
-        String endd = string.valueOf(enddate);
-        EMS_LM_Leave_History__c lh2 = new EMS_LM_Leave_History__c();
-        lh2.EMS_LM_2nd_Approver__c = u.Id;
-        lh2.EMS_LM_Approver__c = u.Id;
-        lh2.EMS_LM_Contact__c = c2.Id;
-        lh2.EMS_LM_Leave_Duration__c = 5;
-        lh2.EMS_LM_Leave_End_Date__c = enddate;
-        lh2.EMS_LM_Leave_Start_Date__c = startdate;
-        lh2.EMS_LM_Leave_Type_Name__c = 'Compensatory Off';
-        insert lh2;
-        string leaveId =lh2.Id;
-        test.startTest();
-        LeaveManagementApexController.getLeaveRequest();
-        LeaveManagementApexController.getLeaveRequestHr();
-       LeaveManagementApexController.cancleLeaveRequest(leaveId);
-        // LeaveManagementApexController.leaveBanlance();
-        test.stopTest();
+        System.runAs(u) {
+            Contact leaveBalance = LeaveManagementApexController.leaveBanlance();
+            Contact conLeaves =[SELECT Id,
+                                	  EMS_LM_No_Of_Availble_Leaves__c
+                                FROM Contact WHERE Id =: u.ContactId LIMIT 1];
+            System.assertEquals(10.00, conLeaves.EMS_LM_No_Of_Availble_Leaves__c);
+            EMS_LM_Leave_History__c leaveVal = TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, true, 'Pending');
+            LeaveManagementApexController.cancleLeaveRequest(leaveVal.Id);
+            leaveVal = [SELECT EMS_LM_Status__c, EMS_LM_Approved_On__c, EMS_LM_Current_Approver__c, EMS_LM_Remarks__c FROM EMS_LM_Leave_History__c WHERE Id = :leaveVal.Id];
+            System.assertEquals(LeaveRequestConstant.CANCELLED, leaveVal.EMS_LM_Status__c);
+            Test.stopTest();
+            LeaveManagementApexController.getLeaveRequest();
+            List<EMS_LM_Leave_History__c> requests = new List<EMS_LM_Leave_History__c>();
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, false, 'Pending'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(6), system.today().adddays(7), annualtype.id, false, 'Approver 1 Pending'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), annualtype.id, false, 'Approver 2 Pending'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), annualtype.id, false, 'Approved'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), annualtype.id, false, 'Cancelled'));
+            insert requests;
+            System.assertEquals(true, requests.size()>0);
+            System.assertEquals(5, requests.size());
+            LeaveManagementApexController.getLeaveRequestHr();
+            System.assertEquals(5, requests.size());
+        }
+        Test.stopTest();
     }
-
 }
