--- a/force-app/main/default/classes/EMS_LM_MyRequestTabLeaveReqTest.cls
+++ b/force-app/main/default/classes/EMS_LM_MyRequestTabLeaveReqTest.cls
@@ -1,7 +1,8 @@
 @isTest
-public class LeaveRequestApexControllerTest {
+private class EMS_LM_MyRequestTabLeaveReqTest {
     
-    static testMethod void testGetLeaveReqData(){
+    @isTest
+    static void testGetLMHistory() {
         user adminuser = TestDataFactory.createAdminUser(true);
         Resource_Role__c role;
         Resource_Role__c role1;
@@ -42,7 +43,8 @@ public class LeaveRequestApexControllerTest {
             u1 = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
             u2 = Testdatafactory.createCommunityUser2WithAccAndContact(acc.id,conRRR.Id,true);
         }
-        system.runAs(u2){
+        
+        System.runAs(u1) {
             List<Id> leaveReqTabIdsList = new list<Id>();
             List<EMS_LM_Leave_History__c> requests = new List<EMS_LM_Leave_History__c>();
             requests.add(TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, false, 'Pending'));
@@ -52,7 +54,22 @@ public class LeaveRequestApexControllerTest {
             for(EMS_LM_Leave_History__c leaveIds : requests) {
                 leaveReqTabIdsList.add(leaveIds.Id);
             }
-            LeaveRequestApexController.LeaveRequestStatus result = LeaveRequestApexController.getLeaveReqData();
+            
+            List<String> statusValues = new List<String>{'Pending','Approver 1 Pending','Approver 2 Pending'};
+                List<String> typeValues = new List<String>{'Annual Leave'};
+                    String startDate = String.valueOf(Date.today().addDays(-7));           
+            String endDate = String.valueOf(Date.today().addDays(7)); 
+            List<EMS_LM_Leave_History__c> result = EMS_LM_MyRequestTabLeaveReq.getLMHistory(startDate, endDate, statusValues, typeValues);
+            for (EMS_LM_Leave_History__c asserTest : result) {
+               String status = asserTest.EMS_LM_Status__c;
+               String requestStartDate = String.valueOf(asserTest.EMS_LM_Leave_Start_Date__c);
+    		   String requestEndDate = String.valueOf(asserTest.EMS_LM_Leave_End_Date__c);
+    	      System.assertEquals(true, (requestStartDate >= startDate && requestStartDate <= endDate));
+   		 	  System.assertEquals(true, (requestEndDate >= startDate && requestEndDate <= endDate));
+              System.assertEquals('Annual Leave', asserTest.EMS_LM_Leave_Type__r.Name);
+              System.assertEquals(true, statusValues.contains(status));
+            }
         }
+        Test.stopTest();
     }
 }
