--- a/force-app/main/default/classes/ProgressBarApplicantController.cls
+++ b/force-app/main/default/classes/ProgressBarApplicantController.cls
@@ -6,12 +6,15 @@ public class ProgressBarApplicantController {
                     Personal_Details_Value_Filled__c, 
                     Identify_Details_Value_Filled__c, 
                     Address_Details_Value_Filled__c,
-                    Other_Certifications_Value_Filled__c
+                    Other_Certifications_Value_Filled__c,
+                    Work_Details_Filled__c,
+                    Education_Details_Filled__c,
+                    Progress_Value__c
                     FROM EMS_EM_Onboarding_Request__c 
                     WHERE Id =: onboardingId ];
     }
 
-    @AuraEnabled(cacheable = true)
+    /*@AuraEnabled(cacheable = true)
     public static List<ems_EM_Additional_Detail__c> fetchAdditionalDetailRecords(String additionalDetailId){
         return[SELECT Id, 
                     Work_Details_Filled__c, 
@@ -19,6 +22,6 @@ public class ProgressBarApplicantController {
                     Onboarding_Request__r.Id
                     FROM ems_EM_Additional_Detail__c 
                     WHERE Onboarding_Request__r.Id =: additionalDetailId ]; 
-    }
+    }*/
     
 }
